syntax = "proto3";

option java_multiple_files = true;
option java_package = "ec.com.dinersclub.issuedDeviceAdministration.infrastructure.grpc";

// Estructuras comunes
message DinHeader {
  string aplicacionId = 1;
  string sesionId = 2;
  string canalId = 3;
  string dispositivo = 4;
  string idioma = 5;
  string portalId = 6;
  string uuid = 7;
  string ip = 8;
  string horaTransaccion = 9;
  string llaveSimetrica = 10;
  string usuario = 11;
  Paginado paginado = 12;
  repeated Tag tags = 13;
}

message Paginado {
  int32 cantRegistros = 1;
  int32 numTotalPag = 2;
  int32 numPagActual = 3;
}

message Tag {
  string clave = 1;
  string valor = 2;
}

// Request
message PasswordUpdateRequest {
  DinHeader dinHeader = 1;
  PasswordUpdateBody dinBody = 2;
}

message PasswordUpdateBody {
  string clave = 1;
  string nuevaClave = 2;
  string usuarioBiometrico = 3;
  string perfil = 4;
  string tipoIngreso = 5;
  string codigoUnicoAplicacion = 6;
  string ultimosDigitosTarjeta = 7;
  bool cambioPrevio = 8;
  string token = 9;
}

// Response
message PasswordUpdateResponse {
  DinHeader dinHeader = 1;
  string tipo = 2;
  string fecha = 3;
  string origen = 4;
  string codigo = 5;
  string codigoErrorProveedor = 6;
  string mensaje = 7;
  string detalle = 8;
  ResponseBody dinBody = 9;
  string statusCode = 10;
  string message = 11;
  string status = 12;
  int32 httpCode = 13;
}

message ResponseBody {
  string descripcionTransaccion = 1;
  string codigoTransaccion = 2;
  string fechaTransaccion = 3;
  string horaTransaccion = 4;
}

service PasswordService {
  rpc UpdatePassword(PasswordUpdateRequest) returns (PasswordUpdateResponse);
} 